--- a/new_styles.css
+++ b/new_styles.css
@@ -765,7 +765,7 @@ p {
   position: absolute;
   top: 5%;
   /* transform: translateY(-50%); */
-  z-index: 10000;
+  /* z-index: 10000; */
   width: 100%;
   height: 220px;
   /* transition: 0.5s; */
@@ -794,9 +794,7 @@ p {
   z-index: 10;
 }
 
-.outer_container .card:hover .contentBx{
-  /* height: 210px; */
-}
+
 
 .outer_container .card .contentBx h2{
   font-family: "Fredoka", sans-serif;
@@ -850,6 +848,7 @@ p {
   border-radius: 4px;
   cursor: pointer;
   font-weight: 700;
+  text-transform: capitalize;
 }
 
 .outer_container .card .contentBx .size span:hover, .important span:hover{
